--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 		<script src="https://unpkg.com/@phosphor-icons/web"></script>
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="dark">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
