feat: add ogp tags and favicon

--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,33 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<title>Aidil.dev</title>
+
+		<!-- OGP -->
+		<meta property="og:title" content="Aidil.dev" />
+		<meta property="og:type" content="profile" />
+		<meta property="og:image" content="./images/site-image.png" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta
+			property="og:description"
+			content="I'm a passionate web developer with a strong commitment to creating user-friendly websites
+		and applications. With expertise in HTML, CSS, JavaScript, and web frameworks, I excel at
+		transforming ideas into elegant digital experiences. My focus on both aesthetics and
+		functionality sets me apart, and I'm always eager to take on new web development challenges."
+		/>
+		<meta property="profile:first_name" content="Aidil" />
+		<meta property="profile:last_name" content="Suherman" />
+		<meta property="profile:username" content="aidilrx04" />
+		<meta property="profile:gender" content="male" />
+
 		%sveltekit.head%
+
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
