--- a/src/app.html
+++ b/src/app.html
@@ -12,9 +12,10 @@
 		<!-- OGP -->
 		<meta property="og:title" content="Aidil.dev" />
 		<meta property="og:type" content="profile" />
-		<meta property="og:image" content="./images/site-image.png" />
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="630" />
+		<meta
+			property="og:image"
+			content="https://res.cloudinary.com/dgy1ecavp/image/upload/f_auto,q_auto/v1/aidil.dev/wr6yhpz5nunnjyclgjbf"
+		/>
 		<meta
 			property="og:description"
 			content="I'm a passionate web developer with a strong commitment to creating user-friendly websites
