feat: add ogp url

--- a/src/app.html
+++ b/src/app.html
@@ -23,6 +23,7 @@
 		transforming ideas into elegant digital experiences. My focus on both aesthetics and
 		functionality sets me apart, and I'm always eager to take on new web development challenges."
 		/>
+		<meta property="og:url" content="/" />
 		<meta property="profile:first_name" content="Aidil" />
 		<meta property="profile:last_name" content="Suherman" />
 		<meta property="profile:username" content="aidilrx04" />
